--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,8 +1,8 @@
 <div id="dead-center">
-	<span class="fancy large">Nicholas Crandall</span>
-	<span class="fancy medium">
+	<span class="large">Nicholas Crandall</span>
+	<span class="small">
 		<%= link_to "Entrepreneur", startups_path %> &nbsp;
-		<%= link_to "Rails Developer", rails_path %> &nbsp;
+		<%= link_to "Rails Developer", projects_path %> &nbsp;
 		<%= link_to "Freelancer", freelance_path %> &nbsp;
 	</span>
 </div>
