contact page and mailer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
   <div id="wrap">
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>"><%= value %></div>
+    <% end %>
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span2">
