--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,8 @@
 html, body{
 	height: 100%;
 	font-family: standard-font !important;
+	font-size: 16px;
+	background-color: #EEE;
 }
 
 h1 {
@@ -15,11 +17,76 @@ h1 {
 	font-weight: normal !important;
 }
 
+h2 {
+	font-size: 20pt !important;
+	font-weight: normal;
+}
+
+h3 {
+	font-size: 18pt !important;
+	font-weight: normal;
+}
+
+h4 {
+	font-size: 16pt !important;
+}
+
+h5, h6 {
+	font-size: 16pt !important;
+	font-weight: normal;
+}
+
+label, input, button, select, textarea {
+	font-size: inherit;
+}
+.wrap {
+	height: 100%;
+	width: 100%;
+	display: inline-block;
+	margin: 0 0 -25px;
+	padding: 0;
+	position: relative;
+}
+
+.left-column {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	float: left;
+	width: 300px;
+	margin: 0;
+	padding-left: 20px;
+	color: #FFF;
+	background-color: #333;
+	h1 {
+		a {
+			color: #FFF;
+		}
+		a:hover {
+			color: #CCC;
+		}
+	}
+	a {
+		color: #FFF;
+	}
+	a:hover {
+		color: #CCC;
+	}
+}
+
+.right-column {
+	padding-left: 60px;
+	width: 900px;
+	margin-left: 300px;
+}
+
 .name {
 	a {
 		color: $grayDark;
+		font-weight: bold;
 	}
-		a:hover {
+	a:hover {
 		text-decoration: none;
 		color: $grayDark;
 	}
@@ -76,11 +143,9 @@ a:hover {
 	text-align: center;
 }
 
-#wrap {
-	height: 100%;
-	margin: 0 auto -25px;
-}
-
 #footer {
 	height: 25px;
+	color: $white;
+	position: absolute;
+	bottom: 0;
 }
