--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,23 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id="wrap">
-    <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
-    <% end %>
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span2">
-          <%= render 'layouts/menu' %>
-        </div>
-    		<div class="span10">
-          <div class="row">
-            <%= yield %>
-          </div>
-        </div>
+    <div class="wrap">
+      <div class="left-column">
+        <%= render 'layouts/menu' %>
+        <%= render 'layouts/footer' %>
+      </div>
+      <div class="right-column">
+        <% flash.each do |key, value| %>
+          <div class="alert alert-<%= key %>"><%= value %></div>
+        <% end %>
+        <%= yield %>
       </div>
     </div>
-  </div>
-  <%= render 'layouts/footer' %>
 </body>
 </html>
