finish startups page

--- a/app/views/static/startups.html.erb
+++ b/app/views/static/startups.html.erb
@@ -1,2 +1,50 @@
 <h1>Startups</h1>
-Coming soon!
+<div class="row">
+  <div class="span6">
+    <h3>Bluemoonlist</h3>
+    <%= image_tag "bluemoonlist.png" %>
+  </div>
+  <div class="span3">
+    <h3> - </h3>
+    <%= link_to "website", "http://bluemoonlist.com" %>
+    <p>
+      Automated calling service that connects users to service providers (plumbers, electricians, etc.)
+    </p>
+    <p>
+      Rails 4.0 - Twilio
+    </p>
+  </div>
+</div>
+<div class="row">
+  <div class="span6">
+    <h3>Ratr</h3>
+    <%= image_tag "ratr.png" %>
+  </div>
+  <div class="span3">
+    <h3> - </h3>
+    <%= link_to "github web", "https://github.com/ncrandall/ratr" %><br />
+    <%= link_to "github server", "https://github.com/ncrandall/ratr" %>
+    <p>
+      Live sentiment analysis tool. Think social &quot;Dial-O-Meter&quot;
+    </p>
+    <p>
+      Node.js - Socket.io - Express.js
+    </p>
+  </div>
+</div>
+<div class="row">
+  <div class="span6">
+    <h3>Scratchproof Jackets</h3>
+    <%= image_tag "spjackets.png" %>
+  </div>
+  <div class="span3">
+    <h3> - </h3>
+    <p>
+      Screen Protector product. We produce the best quality protectors for a fraction of what our competitors charge.
+    </p>
+    <p>
+      Magento - not currently active, though we still make screen protectors.
+      <%= link_to "contact me", contact_path %> with your phone and I'll cut you one :)
+    </p>
+  </div>
+</div>
