--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,8 +1,9 @@
 <div id="dead-center">
-	<span class="large">Nicholas Crandall</span>
+	<span class="large">Nicholas Crandall</span><br />
 	<span class="small">
-		<%= link_to "Entrepreneur", startups_path %> &nbsp;
-		<%= link_to "Rails Developer", projects_path %> &nbsp;
-		<%= link_to "Freelancer", freelance_path %> &nbsp;
+		<%= link_to "About", about_path %> &nbsp;
+    <%= link_to "Portfolio", portfolio_path %> &nbsp;
+    <%= link_to "Blog", posts_path %> &nbsp;
+    <%= link_to "Contact", contact_path %> &nbsp;
 	</span>
 </div>
