--- a/app/views/static/portfolio.html.erb
+++ b/app/views/static/portfolio.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="span6">
     <h3>Bluemoonlist</h3>
-    <%= image_tag "bluemoonlist.png" %>
+    <%= image_tag "bluemoonlist-small.png" %>
   </div>
   <div class="span3">
     <h3> - </h3>
@@ -18,7 +18,7 @@
 <div class="row">
   <div class="span6">
     <h3>Ratr</h3>
-    <%= image_tag "ratr.png" %>
+    <%= image_tag "ratr-small.png" %>
   </div>
   <div class="span3">
     <h3> - </h3>
@@ -35,7 +35,7 @@
 <div class="row">
   <div class="span6">
     <h3>Scratchproof Jackets</h3>
-    <%= image_tag "spjackets.png" %>
+    <%= image_tag "spjackets-small.png" %>
   </div>
   <div class="span3">
     <h3> - </h3>
@@ -53,7 +53,7 @@
 <div class="row">
   <div class="span6">
     <h3>Elase</h3>
-    <%= image_tag "learningsuite.png" %>
+    <%= image_tag "learningsuite-small.png" %>
   </div>
   <div class="span3">
     <h3> - </h3>
@@ -71,7 +71,7 @@
 <div class="row">
   <div class="span6">
     <h3>Pujbaby.com</h3>
-    <%= image_tag "pujbaby.png" %>
+    <%= image_tag "pujbaby-small.png" %>
   </div>
   <div class="span3">
     <h3> - </h3>
@@ -88,7 +88,7 @@
 <div class="row">
   <div class="span6">
     <h3>Elase</h3>
-    <%= image_tag "elase.png" %>
+    <%= image_tag "elase-small.png" %>
   </div>
   <div class="span3">
     <h3> - </h3>
@@ -105,7 +105,7 @@
 <div class="row">
   <div class="span6">
     <h3>Comparemedcosts</h3>
-    <%= image_tag "comparemedcosts.png" %>
+    <%= image_tag "comparemedcosts-small.png" %>
   </div>
   <div class="span3">
     <h3> - </h3>
