fix title and BYU header

--- a/app/views/static/portfolio.html.erb
+++ b/app/views/static/portfolio.html.erb
@@ -52,7 +52,7 @@
 <h1>Work Experience</h1>
 <div class="row">
   <div class="span6">
-    <h3>Elase</h3>
+    <h3>BYU - LearningSuite Tools</h3>
     <%= image_tag "learningsuite-small.png" %>
   </div>
   <div class="span3">
