fix typo on about

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -19,7 +19,7 @@
 <h3>Background</h3>
 <p>
   My name is Nicholas Crandall. I'm a 20 something programmer specializing in web
-  development using Rails. My past experience includes a Bachelor or Science
+  development using Rails. My past experience includes a Bachelor of Science
   degree in Computer Science from Brigham Young University (class '11). For the 
   past several years I have worked as both a contract and freelance developer. 
   Most of my prior work includes PHP and PHP Frameworks such as Wordpress, Cake,
